// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConcurrentLeaves renders the continuous page content 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Other leave, benefits, and income
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3 usa-form-group"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Will you use any employer-sponsored accrued paid leave during your paid leave from PFML?
      </legend>
      <span
        class="display-block line-height-sans-5 measure-5 usa-intro"
      >
        <div
          class="margin-bottom-5"
        >
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-2 margin-bottom-0"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your leave dates for paid leave from PFML
              </h2>
              <div
                class="usa-alert__text"
              >
                1/1/2021 to 6/1/2021
              </div>
            </div>
          </div>
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-0 margin-bottom-4"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your 7-day waiting period dates
              </h2>
              <div
                class="usa-alert__text"
              >
                1/1/2021 to 1/8/2021
              </div>
            </div>
          </div>
          <h2
            class="display-flex flex-row flex-align-start font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-green"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#check_circle"
              />
            </svg>
            <span
              class="flex-1"
            >
              What kinds of accrued paid leave to report
            </span>
          </h2>
          <div
            class="margin-top-1 margin-left-3 margin-bottom-2"
          >
            Employer-sponsored paid vacation time, sick time, and personal time you plan to take during your paid leave from PFML.
          </div>
          <h2
            class="display-flex flex-row flex-align-center font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-red"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#cancel"
              />
            </svg>
            <span
              class="flex-1"
            >
              You don't need to report accrued paid leave that you use during the 7-day waiting period
            </span>
          </h2>
        </div>
      </span>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice3"
            name="has_concurrent_leave"
            type="radio"
            value="true"
          />
          <label
            class="usa-radio__label"
            for="InputChoice3"
          >
            Yes
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I need to report employer-sponsored accrued paid leave I will use after the 7-day waiting period
            </span>
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice4"
            name="has_concurrent_leave"
            type="radio"
            value="false"
          />
          <label
            class="usa-radio__label"
            for="InputChoice4"
          >
            No
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I don't need to report any employer sponsored accrued paid leave after the 7-day waiting period, or I don't know yet
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;

exports[`ConcurrentLeaves renders the intermittent reduced page content 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Other leave, benefits, and income
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3 usa-form-group"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Will you use any employer-sponsored accrued paid leave during your paid leave from PFML?
      </legend>
      <span
        class="display-block line-height-sans-5 measure-5 usa-intro"
      >
        <div
          class="margin-bottom-5"
        >
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-2 margin-bottom-0"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your leave dates for paid leave from PFML
              </h2>
              <div
                class="usa-alert__text"
              >
                2/1/2021 to 7/1/2021
              </div>
            </div>
          </div>
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-0 margin-bottom-4"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your 7-day waiting period dates
              </h2>
              <div
                class="usa-alert__text"
              >
                2/1/2021 to 2/8/2021
              </div>
            </div>
          </div>
          <h2
            class="display-flex flex-row flex-align-start font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-green"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#check_circle"
              />
            </svg>
            <span
              class="flex-1"
            >
              What kinds of accrued paid leave to report
            </span>
          </h2>
          <div
            class="margin-top-1 margin-left-3 margin-bottom-2"
          >
            <div>
              <p>
                Employer-sponsored paid vacation time, sick time, and personal time that:
              </p>
              <ul>
                <li>
                  You are planning to use on days when you are also taking PFML leave.
                </li>
              </ul>
              <p>
                Or
              </p>
              <ul>
                <li>
                  You are planning to use for a PFML qualifying reason, even if it’s not the same reason you are applying for now.
                </li>
              </ul>
            </div>
          </div>
          <details
            class="c-details"
          >
            <summary
              class="margin-bottom-2 text-primary text-underline font-ui-xs"
            >
              What are the qualifying reasons?
            </summary>
            <div
              class="margin-bottom-2"
            >
              <ul
                class="usa-list"
              >
                <li>
                  You had a serious health condition, including illness, injury, or pregnancy.
                </li>
                <li>
                  If you were sick, you were out of work for at least 3 days and needed continuing care from your health care provider or needed inpatient care.
                </li>
                <li>
                  You bonded with your child after birth or placement.
                </li>
                <li>
                  You needed to manage family affairs while a family member is on active duty in the armed forces.
                </li>
                <li>
                  You needed to care for a family member who serves in the armed forces.
                </li>
                <li>
                  You needed to care for a family member with a serious health condition.
                </li>
              </ul>
            </div>
          </details>
          <h2
            class="display-flex flex-row flex-align-center font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-red"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#cancel"
              />
            </svg>
            <span
              class="flex-1"
            >
              You don't need to report accrued paid leave that you use during the 7-day waiting period
            </span>
          </h2>
        </div>
      </span>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice7"
            name="has_concurrent_leave"
            type="radio"
            value="true"
          />
          <label
            class="usa-radio__label"
            for="InputChoice7"
          >
            Yes
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I need to report employer-sponsored accrued paid leave I will use after the 7-day waiting period
            </span>
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice8"
            name="has_concurrent_leave"
            type="radio"
            value="false"
          />
          <label
            class="usa-radio__label"
            for="InputChoice8"
          >
            No
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I don't need to report any employer sponsored accrued paid leave after the 7-day waiting period, or I don't know yet
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;

exports[`ConcurrentLeaves renders the page 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Other leave, benefits, and income
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3 usa-form-group"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Will you use any employer-sponsored accrued paid leave during your paid leave from PFML?
      </legend>
      <span
        class="display-block line-height-sans-5 measure-5 usa-intro"
      >
        <div
          class="margin-bottom-5"
        >
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-2 margin-bottom-0"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your leave dates for paid leave from PFML
              </h2>
              <div
                class="usa-alert__text"
              >
                1/1/2021 to 6/1/2021
              </div>
            </div>
          </div>
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-0 margin-bottom-4"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your 7-day waiting period dates
              </h2>
              <div
                class="usa-alert__text"
              >
                1/1/2021 to 1/8/2021
              </div>
            </div>
          </div>
          <h2
            class="display-flex flex-row flex-align-start font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-green"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#check_circle"
              />
            </svg>
            <span
              class="flex-1"
            >
              What kinds of accrued paid leave to report
            </span>
          </h2>
          <div
            class="margin-top-1 margin-left-3 margin-bottom-2"
          >
            Employer-sponsored paid vacation time, sick time, and personal time you plan to take during your paid leave from PFML.
          </div>
          <h2
            class="display-flex flex-row flex-align-center font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-red"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#cancel"
              />
            </svg>
            <span
              class="flex-1"
            >
              You don't need to report accrued paid leave that you use during the 7-day waiting period
            </span>
          </h2>
        </div>
      </span>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            checked=""
            class="usa-radio__input"
            id="InputChoice1"
            name="has_concurrent_leave"
            type="radio"
            value="true"
          />
          <label
            class="usa-radio__label"
            for="InputChoice1"
          >
            Yes
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I need to report employer-sponsored accrued paid leave I will use after the 7-day waiting period
            </span>
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice2"
            name="has_concurrent_leave"
            type="radio"
            value="false"
          />
          <label
            class="usa-radio__label"
            for="InputChoice2"
          >
            No
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I don't need to report any employer sponsored accrued paid leave after the 7-day waiting period, or I don't know yet
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;

exports[`ConcurrentLeaves renders the page when the claim does not contain concurrent leave data 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Other leave, benefits, and income
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3 usa-form-group"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Will you use any employer-sponsored accrued paid leave during your paid leave from PFML?
      </legend>
      <span
        class="display-block line-height-sans-5 measure-5 usa-intro"
      >
        <div
          class="margin-bottom-5"
        >
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-2 margin-bottom-0"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your leave dates for paid leave from PFML
              </h2>
              <div
                class="usa-alert__text"
              >
                1/1/2021 to 6/1/2021
              </div>
            </div>
          </div>
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-0 margin-bottom-4"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your 7-day waiting period dates
              </h2>
              <div
                class="usa-alert__text"
              >
                1/1/2021 to 1/8/2021
              </div>
            </div>
          </div>
          <h2
            class="display-flex flex-row flex-align-start font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-green"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#check_circle"
              />
            </svg>
            <span
              class="flex-1"
            >
              What kinds of accrued paid leave to report
            </span>
          </h2>
          <div
            class="margin-top-1 margin-left-3 margin-bottom-2"
          >
            Employer-sponsored paid vacation time, sick time, and personal time you plan to take during your paid leave from PFML.
          </div>
          <h2
            class="display-flex flex-row flex-align-center font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-red"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#cancel"
              />
            </svg>
            <span
              class="flex-1"
            >
              You don't need to report accrued paid leave that you use during the 7-day waiting period
            </span>
          </h2>
        </div>
      </span>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice15"
            name="has_concurrent_leave"
            type="radio"
            value="true"
          />
          <label
            class="usa-radio__label"
            for="InputChoice15"
          >
            Yes
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I need to report employer-sponsored accrued paid leave I will use after the 7-day waiting period
            </span>
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice16"
            name="has_concurrent_leave"
            type="radio"
            value="false"
          />
          <label
            class="usa-radio__label"
            for="InputChoice16"
          >
            No
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I don't need to report any employer sponsored accrued paid leave after the 7-day waiting period, or I don't know yet
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;

exports[`ConcurrentLeaves renders the reduced page content 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Other leave, benefits, and income
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3 usa-form-group"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Will you use any employer-sponsored accrued paid leave during your paid leave from PFML?
      </legend>
      <span
        class="display-block line-height-sans-5 measure-5 usa-intro"
      >
        <div
          class="margin-bottom-5"
        >
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-2 margin-bottom-0"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your leave dates for paid leave from PFML
              </h2>
              <div
                class="usa-alert__text"
              >
                2/1/2021 to 7/1/2021
              </div>
            </div>
          </div>
          <div
            class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-0 margin-bottom-4"
            role="region"
            tabindex="-1"
          >
            <div
              class="usa-alert__body"
            >
              <h2
                class="usa-alert__heading font-heading-md text-bold"
              >
                Your 7-day waiting period dates
              </h2>
              <div
                class="usa-alert__text"
              >
                2/1/2021 to 2/8/2021
              </div>
            </div>
          </div>
          <h2
            class="display-flex flex-row flex-align-start font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-green"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#check_circle"
              />
            </svg>
            <span
              class="flex-1"
            >
              What kinds of accrued paid leave to report
            </span>
          </h2>
          <div
            class="margin-top-1 margin-left-3 margin-bottom-2"
          >
            <div>
              <p>
                Employer-sponsored paid vacation time, sick time, and personal time that:
              </p>
              <ul>
                <li>
                  You are planning to use on days when you are also taking PFML leave.
                </li>
              </ul>
              <p>
                Or
              </p>
              <ul>
                <li>
                  You are planning to use for a PFML qualifying reason, even if it’s not the same reason you are applying for now.
                </li>
              </ul>
            </div>
          </div>
          <details
            class="c-details"
          >
            <summary
              class="margin-bottom-2 text-primary text-underline font-ui-xs"
            >
              What are the qualifying reasons?
            </summary>
            <div
              class="margin-bottom-2"
            >
              <ul
                class="usa-list"
              >
                <li>
                  You had a serious health condition, including illness, injury, or pregnancy.
                </li>
                <li>
                  If you were sick, you were out of work for at least 3 days and needed continuing care from your health care provider or needed inpatient care.
                </li>
                <li>
                  You bonded with your child after birth or placement.
                </li>
                <li>
                  You needed to manage family affairs while a family member is on active duty in the armed forces.
                </li>
                <li>
                  You needed to care for a family member who serves in the armed forces.
                </li>
                <li>
                  You needed to care for a family member with a serious health condition.
                </li>
              </ul>
            </div>
          </details>
          <h2
            class="display-flex flex-row flex-align-center font-heading-sm text-bold"
          >
            <svg
              aria-hidden="true"
              class="usa-icon--size-3 margin-right-2px flex-auto text-red"
              fill="currentColor"
              focusable="false"
              role="img"
            >
              <use
                xlink:href="/img/sprite.svg#cancel"
              />
            </svg>
            <span
              class="flex-1"
            >
              You don't need to report accrued paid leave that you use during the 7-day waiting period
            </span>
          </h2>
        </div>
      </span>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice5"
            name="has_concurrent_leave"
            type="radio"
            value="true"
          />
          <label
            class="usa-radio__label"
            for="InputChoice5"
          >
            Yes
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I need to report employer-sponsored accrued paid leave I will use after the 7-day waiting period
            </span>
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice6"
            name="has_concurrent_leave"
            type="radio"
            value="false"
          />
          <label
            class="usa-radio__label"
            for="InputChoice6"
          >
            No
            <span
              class="usa-hint text-base-dark"
            >
              <br />
              I don't need to report any employer sponsored accrued paid leave after the 7-day waiting period, or I don't know yet
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;
